Fix series-status badge taking full width on safari

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -218,6 +218,7 @@ details[open] > summary {
 
 .series-status {
     display: inline flow-root;
+    width: max-content;
     text-transform: uppercase;
     font-size: 75%;
     padding: 2px 5px;
